--- a/conncheck.yaml
+++ b/conncheck.yaml
@@ -14,6 +14,9 @@ rules:
 - apiGroups: [""]
   resources: [pods]
   verbs: [get, create]
+- apiGroups: [""]
+  resources: [pods, pods/log]
+  verbs: [get]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
