--- a/docker/controller/Dockerfile
+++ b/docker/controller/Dockerfile
@@ -9,5 +9,4 @@ RUN wget -q -O /usr/bin/yq "$(wget -q -O - https://api.github.com/repos/mikefara
 # Install kubectl
 RUN wget -q -O /usr/bin/kubectl "https://storage.googleapis.com/kubernetes-release/release/$(wget -q -O - https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl" && chmod +x /usr/bin/kubectl
 
-COPY run.sh .
-
+COPY run.sh /root/run.sh
