Create dedicated Docker image for target Pods
The image listens for TCP connections on port 80 with netcat.

--- a/conncheck.yaml
+++ b/conncheck.yaml
@@ -77,6 +77,5 @@ spec:
         app: conncheck-target
     spec:
       containers:
-      - image: alpine
-        name: alpine
-        command: ["sleep", "infinity"]
+      - image: weibeld/k8s-conncheck-target
+        name: conncheck-target
