--- a/conncheck.yaml
+++ b/conncheck.yaml
@@ -26,6 +26,9 @@ rules:
 - apiGroups: ["apps"]
   verbs: [get]
   resources: [daemonsets]
+- apiGroups: [""]
+  verbs: [get]
+  resources: [services]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
