--- a/conncheck.yaml
+++ b/conncheck.yaml
@@ -50,6 +50,7 @@ metadata:
   namespace: conncheck
 spec:
   hostNetwork: true
+  dnsPolicy: ClusterFirstWithHostNet
   restartPolicy: Never
   serviceAccountName: conncheck-controller
   containers:
