Prober Deployments in root manifest patched by controller Pod
The Deployments with the prober Pods are created initially. Then, after
the controller Pod gathered the topology information, it patches the
Deployments, adding the topology information as environment variables to
the Pod template. This causes the Deployment to restart the prober Pods,
in which case they start running the tests.

Advantages:

- All created resources are in the root manifest (conncheck.yaml)

Disadvantages:

- Bad UX: right after launching the application, two Pods are
Terminating. It takes quite a while until the terminating Pods are
completely terminated and deleted.
- The prober Deployments as defined in the root manifest are not
complete because they will be patched later by the controller Pod.

--- a/conncheck.yaml
+++ b/conncheck.yaml
@@ -17,7 +17,7 @@ rules:
 - verbs: [list]
   resources: [pods, nodes]
   apiGroups: [""]
-- verbs: [create]
+- verbs: [create, get, patch]
   resources: [deployments]
   apiGroups: ["apps"]
 - verbs: [get]
@@ -65,6 +65,72 @@ spec:
       hostPath:
         path: /etc/kubernetes/kubelet.conf
         type: File
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: conncheck-prober
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: prober
+  template:
+    metadata:
+      labels:
+        app: prober
+    spec:
+      containers:
+      - image: weibeld/k8s-conncheck-prober
+        name: k8s-conncheck-prober
+        imagePullPolicy: Always
+        env:
+          - name: SELF_POD_IP
+            valueFrom:
+              fieldRef:
+               fieldPath: status.podIP
+          - name: SELF_POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: SELF_NODE_NAME
+            valueFrom:
+              fieldRef:
+               fieldPath: spec.nodeName
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: conncheck-prober-host-network
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: prober-host-network
+  template:
+    metadata:
+      labels:
+        app: prober-host-network
+    spec:
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
+      containers:
+      - image: weibeld/k8s-conncheck-prober
+        name: k8s-conncheck-prober
+        imagePullPolicy: Always
+        env:
+          - name: SELF_POD_IP
+            valueFrom:
+              fieldRef:
+               fieldPath: status.podIP
+          - name: SELF_POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: SELF_NODE_NAME
+            valueFrom:
+              fieldRef:
+               fieldPath: spec.nodeName
 ---
 apiVersion: v1
 kind: Service
