Extract API server IP address from iptables rules
Drill down into the iptables rules for the "default/kubernetes" Service
which exists in every cluster and exposes the API server for internal
cluster users. These rules contain the destination IP address and port
that kube-proxy configured for DNAT'ing requests to the ClusterIP of the
"default/kubernetes" Service.

This makes the application self-configurable (no need to manually
specify the API server URL), but poses several requirements:

- Requires the container of the controller Pod to run in privileded
mode (i.e. can't be used in a cluster that doesn't allow containers in
privileged mode).
- Probably works only if kube-proxy uses the 'iptables' proxy mode. In
the IPVS proxy mode, kube-proxy probably doesn't set iptables rules.
However, this has not yet been tested.

So far, the functionality has been successfully tested on a cluster
created with kubeadm and on GKE.

--- a/conncheck.yaml
+++ b/conncheck.yaml
@@ -16,7 +16,7 @@ metadata:
 rules:
 - verbs: [get]
   resources: [daemonsets]
-  apiGroups: ["apps"]
+  apiGroups: ["apps", "extensions"]
 - verbs: [list]
   resources: [pods, nodes]
   apiGroups: [""]
@@ -54,14 +54,8 @@ spec:
   - image: weibeld/k8s-conncheck-controller
     name: conncheck-controller
     imagePullPolicy: Always
-    volumeMounts:
-      - name: kubelet-conf
-        mountPath: /etc/kubernetes/kubelet.conf
-  volumes:
-    - name: kubelet-conf
-      hostPath:
-        path: /etc/kubernetes/kubelet.conf
-        type: File
+    securityContext:
+      privileged: true
 ---
 apiVersion: v1
 kind: Service
