Eliminate need for yq
Manifest for prober Deployments is defined in JSON and edited with jq.

--- a/docker/controller/Dockerfile
+++ b/docker/controller/Dockerfile
@@ -1,15 +1,7 @@
 FROM alpine:3.11
 
-# Install jq
-RUN apk add jq
-
-# Install iptables
-RUN apk add iptables
-
-# Install yq
-RUN wget -q -O /usr/bin/yq "$(wget -q -O - https://api.github.com/repos/mikefarah/yq/releases/latest | jq -r '.assets[] | select(.name == "yq_linux_amd64") | .browser_download_url')" && chmod +x /usr/bin/yq
-
-# Install kubectl
+# Install jq, iptables, and kubectl
+RUN apk add jq iptables
 RUN wget -q -O /usr/bin/kubectl "https://storage.googleapis.com/kubernetes-release/release/$(wget -q -O - https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl" && chmod +x /usr/bin/kubectl
 
 COPY run.sh /root/run.sh
