Change probers from Deployments to ReplicaSets
The capabilities of a Deployment (e.g. rolling updates) are not
needed. Additionally, the Pods of a ReplicaSets get shorter names.

--- a/conncheck.yaml
+++ b/conncheck.yaml
@@ -24,7 +24,7 @@ rules:
   resources: [services]
   apiGroups: [""]
 - verbs: [create]
-  resources: [deployments]
+  resources: [replicasets]
   apiGroups: ["apps"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
