--- a/k8s-conncheck.yaml
+++ b/k8s-conncheck.yaml
@@ -25,7 +25,7 @@ rules:
   apiGroups: [""]
 - verbs: [create, get]
   resources: [replicasets]
-  apiGroups: [apps]
+  apiGroups: [apps, extensions]
 - verbs: [delete]
   resources: [pods]
   apiGroups: [""]
